--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <select id="mes">
-        <option disabled select>Escolha o mês</option>
+        <option disabled selected>Escolha o mês</option>
         <option>Janeiro</option>
         <option>Fevereiro</option>
         <option>Março</option>
@@ -23,7 +23,7 @@
     </select>
     
     <select id="dia">
-        <option disabled select>Escolha o dia</option>
+        <option disabled selected>Escolha o dia</option>
         <option>1</option>
         <option>2</option>
         <option>3</option>
